docs: reformat tutorial margins for mobile platform

--- a/docs/src/tutorials/region-manifold-extraction.ipynb
+++ b/docs/src/tutorials/region-manifold-extraction.ipynb
@@ -11,6 +11,8 @@
     "tags": []
    },
    "source": [
+    "(gv-tutorials-region-manifold-extraction)=\n",
+    "\n",
     "# Region Manifold Extraction"
    ]
   },
@@ -104,23 +106,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24d5a70d-4d39-4048-a5e1-8e538c190f49",
-   "metadata": {},
-   "source": [
-    "```{seealso}\n",
-    "---\n",
-    "class: margin, dropdown, toggle-shown\n",
-    "---\n",
-    "For further information refer to [LFRic - a modelling system fit for future computers](https://www.metoffice.gov.uk/research/approach/modelling-systems/lfric).\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "1d67f3fd-4c13-4227-aa6b-d695331b593c",
    "metadata": {},
    "source": [
-    "First, let's import ``geovista`` and generate some **LFRic model** cubed-sphere sample data using the {py:func}`~geovista.pantry.meshes.lfric` and {py:func}`~geovista.pantry.meshes.lfric_sst` convenience functions:"
+    "First, let's import ``geovista`` and generate some **LFRic Model**[^mn1] cubed-sphere sample data using the {py:func}`~geovista.pantry.meshes.lfric` and {py:func}`~geovista.pantry.meshes.lfric_sst` convenience functions:\n",
+    "\n",
+    "[^mn1]: {-} {fa}`share` **LFRic Model** - For further information refer to [LFRic - a modelling system fit for future computers](https://www.metoffice.gov.uk/research/approach/modelling-systems/lfric)."
    ]
   },
   {
@@ -213,14 +204,14 @@
     "\n",
     "The {py:func}`~geovista.geodesic.panel` function is a convenience which allows you to extract cells from a mesh within **1 of the 6** named cubed-sphere panels i.e., ``africa``, ``americas``, ``antarctic``, ``arctic``, ``asia``, and ``pacific``.\n",
     "\n",
+    "It returns a {py:class}`geovista.geodesic.BBox` instance, which defines a **geodesic bounding-box manifold** for the requested spatial region.\n",
+    "\n",
     "```{hint}\n",
     "---\n",
-    "class: margin, dropdown, toggle-shown\n",
+    "class: dropdown, toggle-shown\n",
     "---\n",
     "You can use {py:class}`~geovista.geodesic.BBox` directly to create **generic** geodesic bounding-box manifolds.\n",
     "```\n",
-    "\n",
-    "It returns a {py:class}`geovista.geodesic.BBox` instance, which defines a **geodesic bounding-box manifold** for the requested spatial region.\n",
     "\n",
     "So let's go ahead and create the {py:class}`~geovista.geodesic.BBox` for the ``americas`` cubed-sphere panel and use its {py:meth}`~geovista.geodesic.BBox.mesh` method to visualise the manifold:"
    ]
@@ -257,19 +248,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "91922755-e5f9-4210-8513-5848a91e969b",
-   "metadata": {},
-   "source": [
-    "```{note}\n",
-    "---\n",
-    "class: margin, dropdown, toggle-shown\n",
-    "---\n",
-    "``p`` is a {py:class}`~geovista.geoplotter.GeoPlotter` instance. It inherits all the behaviour of a {py:class}`pyvista.Plotter`, but also additional cartographic conveniences from our {py:class}`~geovista.geoplotter.GeoPlotterBase`.\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0af3bac6-38b9-48cb-9052-27172882b765",
@@ -301,6 +279,13 @@
    "metadata": {},
    "source": [
     "Seems to be right on the money! 👍\n",
+    "\n",
+    "```{note}\n",
+    "---\n",
+    "class: dropdown, toggle-shown\n",
+    "---\n",
+    "``p`` is a {py:class}`~geovista.geoplotter.GeoPlotter` instance. It inherits all the behaviour of a {py:class}`pyvista.Plotter`, but also additional cartographic conveniences from our {py:class}`~geovista.geoplotter.GeoPlotterBase`.\n",
+    "```\n",
     "\n",
     "However, let's apply some ``opacity`` to the ``c48_sst`` mesh so that we can see through the surface and view the ``americas_bbox`` from a different angle.\n",
     "\n",
@@ -392,9 +377,9 @@
    "id": "dab42368-7a84-4631-9c6e-c7097efb3564",
    "metadata": {},
    "source": [
-    "[^mn1]The extracted ``region`` returned by {py:meth}`~geovista.geodesic.BBox.enclosed` is a {py:class}`pyvista.PolyData`. Under the hood {py:meth}`~geovista.geodesic.BBox.enclosed` uses the {py:meth}`pyvista.DataSetFilters.select_enclosed_points` method to achieve this. \n",
+    "The extracted ``region`` returned by {py:meth}`~geovista.geodesic.BBox.enclosed`[^mn2] is a {py:class}`pyvista.PolyData`. Under the hood {py:meth}`~geovista.geodesic.BBox.enclosed` uses the {py:meth}`pyvista.DataSetFilters.select_enclosed_points` method to achieve this. \n",
     "\n",
-    "[^mn1]: {-} {fa}`flask` You may want to experiment with the ``preference`` *kwarg* of the {py:meth}`~geovista.geodesic.BBox.enclosed` method to see the impact on the end result.\n",
+    "[^mn2]: {-} {fa}`flask` You may want to experiment with the ``preference`` *kwarg* of the {py:meth}`~geovista.geodesic.BBox.enclosed` method to see the impact on the end result.\n",
     "\n",
     "Anyways, let's go ahead and see the extracted region, which should represent all the cells from the ``c48_sst`` mesh within the ``americas`` bounding-box:"
    ]
@@ -428,14 +413,9 @@
    "id": "af26cfc6-d0ba-4766-ab8b-f07d1368cd45",
    "metadata": {},
    "source": [
-    "```{hint}\n",
-    "---\n",
-    "class: margin, dropdown, toggle-shown\n",
-    "---\n",
-    "When you extract data from a mesh use the {py:meth}`~pyvista.Plotter.add_mesh` ``clim`` *kwarg* to ensure the **same** colorbar range.\n",
-    "```\n",
+    "Now bring this all together by rendering the *extracted region*[^mn3] along with a [Natural Earth](https://www.naturalearthdata.com/) texture mapped base layer and coastlines:\n",
     "\n",
-    "Now bring this all together by rendering the extracted region along with a [Natural Earth](https://www.naturalearthdata.com/) texture mapped base layer and coastlines:"
+    "[^mn3]: {-} {fa}`circle-info` When you extract data from a mesh use the {py:meth}`~pyvista.Plotter.add_mesh` ``clim`` *kwarg* to ensure the **same** colorbar range. Compare this render of the ``region`` mesh with the previous render without ``clim``. Notice the difference?"
    ]
   },
   {
@@ -472,16 +452,11 @@
    "id": "38b5b3ee-6da0-419f-b5e2-26539dded41f",
    "metadata": {},
    "source": [
-    "```{hint}\n",
-    "---\n",
-    "class: margin, dropdown, toggle-shown\n",
-    "---\n",
-    "Discover the *data arrays* available on a mesh with {py:attr}`~pyvista.DataSet.array_names`, and the *active scalars* with {py:attr}`~pyvista.DataSet.active_scalars_name`.\n",
-    "```\n",
-    "\n",
     "As we're not particularly interested in the masked land masses, we can easily remove them using the {py:meth}`pyvista.DataSetFilters.threshold` method available on the ``region`` {py:class}`~pyvista.PolyData` instance.\n",
     "\n",
-    "By default, the {py:meth}`~pyvista.DataSetFilters.threshold` method will remove cells with ``nan`` values from the active scalars array on the mesh, which is just what we need:"
+    "By default, the {py:meth}`~pyvista.DataSetFilters.threshold` method will remove cells with ``nan`` values from the *active scalars array*[^mn4] on the mesh, which is just what we need:\n",
+    "\n",
+    "[^mn4]: {-} {fa}`circle-info` Discover the *data arrays* available on a mesh with {py:attr}`~pyvista.DataSet.array_names`, and the *active scalars* with {py:attr}`~pyvista.DataSet.active_scalars_name`."
    ]
   },
   {
@@ -563,14 +538,9 @@
    "id": "b7632b04-0d53-4f4e-858e-f424b23cd39e",
    "metadata": {},
    "source": [
-    "```{note}\n",
-    "---\n",
-    "class: margin, dropdown, toggle-shown\n",
-    "---\n",
-    "If no ``crs`` is provided to {py:class}`~geovista.geoplotter.GeoPlotter`, it will assume geographic longitude and latitudes (``WGS84``), and render the mesh on a sphere.\n",
-    "```\n",
+    "We pass the ``crs`` as a *kwarg* to the {py:class}`~geovista.geoplotter.GeoPlotter`[^mn5] and render the projected scene:\n",
     "\n",
-    "We pass the ``crs`` as a *kwarg* to the {py:class}`~geovista.geoplotter.GeoPlotter` and render the projected scene:"
+    "[^mn5]: {-} {fa}`circle-info` If no ``crs`` is provided to {py:class}`~geovista.geoplotter.GeoPlotter`, it will assume geographic longitude and latitudes (``WGS84``), and render the mesh on a sphere."
    ]
   },
   {
@@ -719,7 +689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
