disable the pip cache

--- a/changelog/1160.contributor.rst
+++ b/changelog/1160.contributor.rst
@@ -1,2 +1,2 @@
 Updated ``dependabot`` to orchestrate updates for the ``pip``
-package-ecosystem. (:user:`bjlitte`)
+package-ecosystem. (:user:`bjlittle`)
