--- a/changelog/1207.contributor.rst
+++ b/changelog/1207.contributor.rst
@@ -1,1 +1,1 @@
-Add taplo pre-commit hook to format and sort toml files. (:user:`tkoyama010`)
+Add `taplo <https://github.com/tamasfe/taplo>`__ pre-commit hook to format and sort toml files. (:user:`tkoyama010`)
