ruff: FBT and TD compliance (#1211)
* ruff: FBT and TD compliance

* add changelog news fragment

--- a/changelog/1207.contributor.rst
+++ b/changelog/1207.contributor.rst
@@ -1,1 +1,2 @@
-Add `taplo <https://github.com/tamasfe/taplo>`__ pre-commit hook to format and sort toml files. (:user:`tkoyama010`)
+Added `taplo <https://github.com/tamasfe/taplo>`__ ``pre-commit`` hook to
+format and sort ``toml`` files. (:user:`tkoyama010`)
