added changelog news fragment

--- a/changelog/989.internal.rst
+++ b/changelog/989.internal.rst
@@ -1,1 +1,3 @@
-Added `adRise/update-pr-branch <https://github.com/adRise/update-pr-branch>`__ GHA to automatically update stale ``auto-merge`` pull-requests. (:user:`tkoyama010`)
+Added `adRise/update-pr-branch <https://github.com/adRise/update-pr-branch>`__
+:fab:`github` Action to automatically update stale ``auto-merge`` pull-requests.
+(:user:`tkoyama010`)
