--- a/changelog/1072.documentation.rst
+++ b/changelog/1072.documentation.rst
@@ -1,1 +1,1 @@
-Added developer :ref:`changelog <gv-developer-changelog>` notes. (:user:`bjlittle`)
+Added :ref:`gv-developer-towncrier` contributor guidelines. (:user:`bjlittle`)
