--- a/changelog/1080.documentation.rst
+++ b/changelog/1080.documentation.rst
@@ -1,2 +1,2 @@
-Updated the :ref:`gv-developer-changelog` contributor guidelines.
+Updated the :ref:`gv-developer-towncrier` contributor guidelines.
 (:user:`bjlittle`)
