--- a/changelog/1300.enhancement.rst
+++ b/changelog/1300.enhancement.rst
@@ -1,3 +1,3 @@
-Made the entire code base MyPy-compliant. This should make programming faster
-and more intuitive for anyone using an IDE and/or any sort of type-checking.
-(:user:`trexfeathers`)
+Made the entire code base `mypy <https://github.com/python/mypy>`__ compliant.
+This should make development faster and more intuitive for anyone using an IDE
+and/or any sort of type-checking.
