--- a/changelog/1056.documentation.rst
+++ b/changelog/1056.documentation.rst
@@ -1,1 +1,2 @@
-Added the initial :ref:`gv-reference-whatsnew` infrastructure. (:user:`bjlittle`)
+Added the initial :ref:`tippy-gv-reference-whatsnew` infrastructure.
+(:user:`bjlittle`)
