--- a/changelog/1072.documentation.rst
+++ b/changelog/1072.documentation.rst
@@ -1,1 +1,1 @@
-Added :ref:`gv-developer-towncrier` contributor guidelines. (:user:`bjlittle`)
+Added :ref:`tippy-gv-developer-towncrier` contributor guidelines. (:user:`bjlittle`)
