--- a/changelog/1279.contributor.rst
+++ b/changelog/1279.contributor.rst
@@ -1,1 +1,1 @@
-Restructured the :ref:`gv-developer` guidelines. (:user:`bjlittle`)
+Restructured the :ref:`tippy-gv-developer` guidelines. (:user:`bjlittle`)
