--- a/changelog/1304.contributor.rst
+++ b/changelog/1304.contributor.rst
@@ -1,2 +1,2 @@
-Added ``sphinx`` cross-references to the :ref:`gv-examples`.
+Added ``sphinx`` cross-references to the :ref:`tippy-gv-examples`.
 (:user:`bjlittle`)
