--- a/changelog/1339.documentation.rst
+++ b/changelog/1339.documentation.rst
@@ -1,3 +1,3 @@
-Simplified several :ref:`gv-examples` by using ``geovista.pantry.meshes``
+Simplified several :ref:`tippy-gv-examples` by using ``geovista.pantry.meshes``
 instead of loading ``geovista.pantry.data`` to construct sample
 meshes. (:user:`bjlittle`)
