--- a/docs/src/tutorials/region-manifold-extraction.ipynb
+++ b/docs/src/tutorials/region-manifold-extraction.ipynb
@@ -12,6 +12,7 @@
    },
    "source": [
     "(gv-tutorials-region-manifold-extraction)=\n",
+    "(tippy-gv-tutorials-region-manifold-extraction)=\n",
     "\n",
     "# Region Manifold Extraction"
    ]
@@ -689,7 +690,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
