--- a/changelog/1411.internal.rst
+++ b/changelog/1411.internal.rst
@@ -1,3 +1,3 @@
-Added the https://earthexplorer.usgs.gov/ to the list of URLs ignored by the
+Added https://earthexplorer.usgs.gov/ to the list of URLs ignored by the
 `lychee <https://github.com/lycheeverse/lychee-action>`__ :fab:`github`
 Action. Closes :issue:`1410`. (:user:`bjlittle`)
