--- a/changelog/1497.contributor.rst
+++ b/changelog/1497.contributor.rst
@@ -1,4 +1,4 @@
-Created the PyPI optional dependencies ``devs`` group and renamed the ``pixi``
-feature ``dev`` to ``devs``. Also included the
-`zizmor <https://github.com/zizmorcore/zizmor>`__ package to ``devs``.
-(:user:`bjlittle`)
+Created the PyPI optional dependencies ``devs`` group and renamed the
+`pixi <https://github.com/prefix-dev/pixi>`__ feature ``dev`` to ``devs``.
+Also included the `zizmor <https://github.com/zizmorcore/zizmor>`__ package
+to ``devs``. (:user:`bjlittle`)
