--- a/changelog/1578.contributor.rst
+++ b/changelog/1578.contributor.rst
@@ -1,3 +1,3 @@
-Added the `pixi <https://github.com/prefix-dev/pixi>`__ 🧚 tasks
+Added the `pixi <https://github.com/prefix-dev/pixi>`__ 🧚 workflow tasks
 ``clean-all``, ``clean-cache`` and ``doctest`` for the ``docs``
 feature. (:user:`bjlittle`)
