--- a/changelog/1628.documentation.rst
+++ b/changelog/1628.documentation.rst
@@ -1,3 +1,3 @@
-Added an :ref:`tippy-gv-installation` `VHS tape <https://github.com/charmbracelet/vhs>`__
-showing a developer install using `pixi <https://github.com/prefix-dev/pixi>`__ 🧚.
-(:user:`bjlittle`)
+Added a `VHS tape recording <https://github.com/charmbracelet/vhs>`__ to
+:ref:`tippy-gv-installation` showing a developer install with
+`pixi <https://github.com/prefix-dev/pixi>`__ 🧚. (:user:`bjlittle`)
