add changelog news fragment

--- a/changelog/1120.internal.rst
+++ b/changelog/1120.internal.rst
@@ -1,3 +1,4 @@
 Removed technical debt by migrating builtin ``open()`` usage to
-``pathlib.Path.open()`` since enforcing ``SPEC-0`` minimum
+``pathlib.Path.open()`` since enforcing
+`SPEC-0 <https://scientific-python.org/specs/spec-0000/>`__ minimum
 ``python>=3.11`` support. (:user:`bjlittle`)
