--- a/changelog/1254.contributor.rst
+++ b/changelog/1254.contributor.rst
@@ -1,2 +1,3 @@
 Updated the ``ci-label`` :fab:`github` Action to migrate from ``nep-29`` to
-``spec-0``. (:user:`bjlittle`)
+`SPEC-0 <https://scientific-python.org/specs/spec-0000/>`__.
+(:user:`bjlittle`)
