ruff fixes for >=py312

--- a/docs/src/tutorials/region-manifold-extraction.ipynb
+++ b/docs/src/tutorials/region-manifold-extraction.ipynb
@@ -43,7 +43,7 @@
     "import pyvista\n",
     "\n",
     "import geovista.cache\n",
-    "import geovista.theme\n",
+    "import geovista.theme  # noqa: F401\n",
     "\n",
     "# Tip: Change this to \"trame\" for an interactive backend.\n",
     "pyvista.set_jupyter_backend(\"static\")\n",
