docs: add community section

--- a/changelog/1077.documentation.rst
+++ b/changelog/1077.documentation.rst
@@ -1,2 +1,2 @@
-Updated ``README.md`` with introduction for *Star History* section.
+Updated ``README.md`` with introduction for ``Star History`` section.
 (:user:`bjlittle`)
