--- a/changelog/1931.documentation.rst
+++ b/changelog/1931.documentation.rst
@@ -1,2 +1,2 @@
-Added the ``geovista`` badge |geovista| as a `shields.io <https://shields.io/>`__
+Added the ``geovista`` badge |geovista-badge| as a `shields.io <https://shields.io/>`__
 endpoint asset. (:user:`bjlittle`)
