--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -1,13 +1,20 @@
-% This is the first ever scientific article to use and cite geovista 🎉
 @article{gmd-16-5601-2023,
-    author  = {Sergeev, D. E. and Mayne, N. J. and Bendall, T. and Boutle, I. A. and Brown, A. and Kav\v{c}i\v{c}, I. and Kent, J. and Kohary, K. and Manners, J. and Melvin, T. and Olivier, E. and Ragta, L. K. and Shipway, B. and Wakelin, J. and Wood, N. and Zerroukat, M.},
-    title   = {Simulations of idealised 3{D} atmospheric flows on terrestrial planets using {LFR}ic-{A}tmosphere},
-    journal = {Geoscientific Model Development},
-    year    = {2023},
-    month   = {10},
-    volume  = {16},
-    number  = {19},
-    pages   = {5601--5626},
-    doi     = {10.5194/gmd-16-5601-2023},
-    url     = {https://gmd.copernicus.org/articles/16/5601/2023/}
+	title = {
+		Simulations of idealised 3{D} atmospheric flows on terrestrial planets using
+		{LFR}ic-{A}tmosphere
+	},
+	author = {
+		Sergeev, D. E. and Mayne, N. J. and Bendall, T. and Boutle, I. A. and Brown,
+		A. and Kav\v{c}i\v{c}, I. and Kent, J. and Kohary, K. and Manners, J. and
+		Melvin, T. and Olivier, E. and Ragta, L. K. and Shipway, B. and Wakelin, J.
+		and Wood, N. and Zerroukat, M.
+	},
+	year = {2023},
+	month = oct,
+	journal = {Geoscientific Model Development},
+	volume = {16},
+	number = {19},
+	pages = {5601--5626},
+	doi = {10.5194/gmd-16-5601-2023},
+	url = {https://gmd.copernicus.org/articles/16/5601/2023/}
 }
