tidy dimensionality references

--- a/docs/src/tutorials/region-manifold-extraction.ipynb
+++ b/docs/src/tutorials/region-manifold-extraction.ipynb
@@ -243,7 +243,7 @@
    "id": "8c55bd6c-e0a8-448e-a48c-c9fd8a48da57",
    "metadata": {},
    "source": [
-    "Note that the ``americas_bbox`` is constructed from **geodesic lines** i.e., great circles, and is a 3-D manifold i.e., a water-tight geometric structure. As such, we can then use it to extract points/cells from **any** underlying mesh. \n",
+    "Note that the ``americas_bbox`` is constructed from **geodesic lines** i.e., great circles, and is a 3D manifold i.e., a water-tight geometric structure. As such, we can then use it to extract points/cells from **any** underlying mesh. \n",
     "\n",
     "Before doing that, first let’s render the ``americas_bbox`` and the ``c48_sst`` mesh together so that we can see their relationship to one another and convince ourselves that the ``americas_bbox`` instance is indeed covering the correct panel of the cubed-sphere:"
    ]
