docs: font awesome icons coverage

--- a/docs/src/tutorials/region-manifold-extraction.ipynb
+++ b/docs/src/tutorials/region-manifold-extraction.ipynb
@@ -14,7 +14,7 @@
     "(gv-tutorials-region-manifold-extraction)=\n",
     "(tippy-gv-tutorials-region-manifold-extraction)=\n",
     "\n",
-    "# Region Manifold Extraction"
+    "# {fa}`droplet` Region Manifold Extraction"
    ]
   },
   {
