add changelog news fragment

--- a/changelog/1763.dependency.rst
+++ b/changelog/1763.dependency.rst
@@ -1,2 +1,2 @@
-Refreshed the :class:`~geovista.report.Report` package dependencies.
+Refreshed the :class:`geovista.report.Report` package dependencies.
 (:user:`bjlittle`)
