--- a/changelog/2023.enhancement.rst
+++ b/changelog/2023.enhancement.rst
@@ -1,3 +1,3 @@
 Updated ``BBox`` to allow corner points to be specified in different projections
-via new ``crs`` keyword (defaults to WGS84). (:issue:`1986`, :pull:`2023`).
+via new ``crs`` keyword (defaults to :data:`geovista.crs.WGS84`). Closes :issue:`1986`.
 (:user:`ukmo-ccbunney`)
