add changelog news fragments

--- a/changelog/1872.feature.rst
+++ b/changelog/1872.feature.rst
@@ -1,1 +1,5 @@
-Added the ``bbox`` argument to the GeoPlotterBase class, allowing users to consistently subset the render so that only points enclosed by the bbox are rendered, including coastline, base_layer, meshes, graticule, and their labels. Closes :issue:`1869` (:user:`RobWatersMet`)
+Added the ``bbox`` property to the :class:`geovista.geoplotter.GeoPlotterBase`
+allowing users to consistently subset the render so that only geometries enclosed
+by the bounding-box are rendered, including coastlines, base layers, meshes,
+graticule meridians/parallels and their labels. Closes :issue:`1869`.
+(:user:`RobWatersMet`)
